remove obsolete dao package and add new file of Main package and serviceimpl