@@ -2,14 +2,14 @@ package service.impl;
 
 import model.Payment;
 import model.PaymentStatus;
+import service.CourseService;
 import service.PaymentService;
 import util.FileUtil;
 import exception.PaymentNotFoundException;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
@@ -18,11 +18,18 @@ public class PaymentServiceImpl implements PaymentService {
     private final Map<Integer, Payment> paymentMap =
             new ConcurrentHashMap<>();
 
+    private final CourseService courseService;
+
     private static final String PAYMENT_FILE = "data/payments.txt";
+
+    public PaymentServiceImpl(CourseService courseService) {
+        this.courseService = courseService;
+    }
+
+    /* ---------------- CORE METHODS ---------------- */
 
     @Override
     public void addPayment(Payment payment) {
-
         validatePayment(payment);
 
         if (paymentMap.putIfAbsent(payment.getPaymentId(), payment) != null) {
@@ -35,22 +42,18 @@ public class PaymentServiceImpl implements PaymentService {
 
     @Override
     public Payment getPaymentById(Integer paymentId) {
-
         validatePaymentId(paymentId);
 
         Payment payment = paymentMap.get(paymentId);
-
         if (payment == null) {
             throw new PaymentNotFoundException(
                     "Payment not found with id: " + paymentId);
         }
-
         return payment;
     }
 
     @Override
     public List<Payment> getPaymentsByStudent(Integer studentId) {
-
         if (studentId == null) {
             throw new IllegalArgumentException("StudentId cannot be null");
         }
@@ -58,7 +61,7 @@ public class PaymentServiceImpl implements PaymentService {
         return paymentMap.values()
                 .stream()
                 .filter(p -> studentId.equals(p.getStudentId()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -68,19 +71,15 @@ public class PaymentServiceImpl implements PaymentService {
 
     @Override
     public void updatePaymentStatus(Integer paymentId, String status) {
-
         validatePaymentId(paymentId);
 
-        PaymentStatus newStatus = PaymentStatus.valueOf(status.toUpperCase());
-
         Payment payment = paymentMap.get(paymentId);
-
         if (payment == null) {
             throw new PaymentNotFoundException(
                     "Payment not found with id: " + paymentId);
         }
 
-        payment.setStatus(newStatus);
+        payment.setStatus(PaymentStatus.valueOf(status.toUpperCase()));
         payment.setPaymentDate(LocalDateTime.now());
 
         FileUtil.writeToFile(PAYMENT_FILE,
@@ -89,11 +88,9 @@ public class PaymentServiceImpl implements PaymentService {
 
     @Override
     public void deletePayment(Integer paymentId) {
-
         validatePaymentId(paymentId);
 
         Payment removed = paymentMap.remove(paymentId);
-
         if (removed == null) {
             throw new PaymentNotFoundException(
                     "Payment not found with id: " + paymentId);
@@ -103,14 +100,57 @@ public class PaymentServiceImpl implements PaymentService {
                 "DELETED: " + formatPayment(removed));
     }
 
-    private void validatePayment(Payment payment) {
+    /* ---------------- REQUIRED METHOD ---------------- */
 
+    @Override
+    public List<Integer> getStudentsWithPendingFees() {
+
+        // Sum SUCCESS payments per student
+        Map<Integer, BigDecimal> totalPaidByStudent =
+                paymentMap.values()
+                        .stream()
+                        .filter(p -> p.getStatus() == PaymentStatus.SUCCESS)
+                        .collect(Collectors.groupingBy(
+                                Payment::getStudentId,
+                                Collectors.reducing(
+                                        BigDecimal.ZERO,
+                                        Payment::getAmount,
+                                        BigDecimal::add
+                                )
+                        ));
+
+        return paymentMap.values()
+                .stream()
+                .map(p -> {
+                    Integer studentId = p.getStudentId();
+
+                    BigDecimal courseFee =
+                            courseService
+                                    .getCourseById(p.getCourseId())
+                                    .getFees();
+
+                    BigDecimal paid =
+                            totalPaidByStudent.getOrDefault(
+                                    studentId,
+                                    BigDecimal.ZERO
+                            );
+
+                    return paid.compareTo(courseFee) < 0 ? studentId : null;
+                })
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+    }
+
+    /* ---------------- VALIDATION ---------------- */
+
+    private void validatePayment(Payment payment) {
         if (payment == null ||
                 payment.getPaymentId() == null ||
                 payment.getStudentId() == null ||
                 payment.getCourseId() == null ||
                 payment.getAmount() == null ||
-                payment.getAmount().doubleValue() <= 0 ||
+                payment.getAmount().compareTo(BigDecimal.ZERO) <= 0 ||
                 payment.getPaymentMode() == null ||
                 payment.getStatus() == null ||
                 payment.getPaymentDate() == null) {
@@ -126,7 +166,6 @@ public class PaymentServiceImpl implements PaymentService {
     }
 
     private String formatPayment(Payment payment) {
-
         return payment.getPaymentId() + "," +
                 payment.getStudentId() + "," +
                 payment.getCourseId() + "," +
